kubernetes/components/network-policy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-go-allow-ingress-and-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hello-go
  policyTypes: ["Ingress"]
  ingress:
    - from:
        # ★ LAB T16: Ingress Controller の Namespace からのみ許可
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 8080
